test: wrote 4 changeTeamTests